# yatt

./: .gitignore  README.md  example.ipynb  example.py  requirements.txt  setup.cfg
yatt/: cli.py  summary_writer.py  trainer.py
