[metadata]
name = yatt
version = 0.0.1
author = Aaron Levine
author_email = ald.levine@gmail.com
url = https://github.com/Aldlevine/yatt.git
description = Yatt is yet another PyTorch trainer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    IPython
    pyyaml
    tensorboard
    torch
    torchvision
    tqdm
    fyst @ git+https://github.com/Aldlevine/fyst.git

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    yatt = yatt.cli:main
